--- a/KalikoCMS.Search/app.config
+++ b/KalikoCMS.Search/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="Telerik.OpenAccess" publicKeyToken="7ce17eeaf1d59342" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2014.2.711.1" newVersion="2014.2.711.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AutoMapper" publicKeyToken="be96cd2c38ef1005" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.1.0" newVersion="3.2.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
