--- a/KalikoCMS.Search/packages.config
+++ b/KalikoCMS.Search/packages.config
@@ -4,6 +4,6 @@
   <package id="fastJSON" version="2.1.2.0" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" />
   <package id="Kaliko.Logger" version="1.1.0" targetFramework="net40" />
-  <package id="KalikoCMS.Engine" version="0.9.8" targetFramework="net40" />
+  <package id="KalikoCMS.Engine" version="1.0.0-beta1" targetFramework="net40" />
   <package id="Telerik.DataAccess.Core" version="2014.2.711.1" targetFramework="net40" />
 </packages>
