--- a/KalikoCMS.Search/packages.config
+++ b/KalikoCMS.Search/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.3.1" targetFramework="net40" />
-  <package id="fastJSON" version="2.1.14.0" targetFramework="net40" />
-  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" />
+  <package id="AutoMapper" version="6.0.2" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" requireReinstallation="true" />
   <package id="Kaliko.Logger" version="1.1.1" targetFramework="net40" />
-  <package id="KalikoCMS.Engine" version="1.2.1-beta2" targetFramework="net40" />
+  <package id="KalikoCMS.Engine" version="1.2.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="Telerik.DataAccess.Core" version="2016.2.822.1" targetFramework="net40" />
 </packages>
